finally got this working, thanks chris